--- a/index.html
+++ b/index.html
@@ -115,6 +115,18 @@
              A máquina de Turing foi criada em 1936, muito tempo antes da invenção dos computadores modernos. A maior parte dos nossos dispositivos eletrônicos, como celulares e computadores, são máquinas programáveis, que operam de acordo com os fundamentos da máquina de Turing. As calculadoras, por exemplo, operam como as primeiras máquinas de Turing, programadas para realizar cálculos simples.
             </p>
         </div>
-   
+   <div id="t">
+        Referência: SILVA, Daniel Neves. "Alan Turing"; Brasil Escola. Disponível em: https://brasilescola.uol.com.br/biografia/alan-mathison.htm.
+    </div>
+    <div style="background-color: black;height: 1px;width: 100%;float: left;"></div>
+    <div id="comentario">
+        <h1>comentarios</h1>
+    </div>
+
+
+
+    <div id="rodape">
+       
+    </div>
 </body>
 </html>
