inplementei o css da parte de avaliação

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/styleTexto.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+    <script src="js/script.js"></script>
 </head>
 <body>
     <div id="cabecalho">
@@ -134,7 +135,33 @@
     <div id="comentario">
         <h1>comentarios</h1>
     </div>
+        <div class="conteiner"> 
+            <form action="">
+                <h1>deixe um comentario e avaliação</h1>
+                <div class="input-single"> 
+                    <input type="text" name="name" id="name-box" class="input" autocomplete="off" required>
+                    <label for="nome-box">nome</label>
+                </div>
+                <div class="input-single"> 
+                    <input type="text" name="name" id="coment-box" class="input" autocomplete="off" required>
+                    <label for="coment-box">comentario/(sujestão de tema)</label>
+                </div>
 
+            <ul class="avaliacao">
+                
+                <li class="star-icon ativo" data-avaliacao="1"> </li>
+                <li class="star-icon " data-avaliacao="2"> </li>
+                <li class="star-icon" data-avaliacao="3"> </li>
+                <li class="star-icon" data-avaliacao="4"> </li>
+                <li class="star-icon" data-avaliacao="5"> </li>
+        
+            </ul>
+            <div class="enviar">
+                <input type="submit" id="send" value="enviar">
+            </div>
+
+            </form>
+        </div>
 
 
     <div id="rodape">
